--- a/src/main.scss
+++ b/src/main.scss
@@ -72,6 +72,11 @@ body {
   border-radius: 7px;
 }
 
+.copy {
+  color: rgba(255, 255, 255, 0.5);
+  text-align: center;
+}
+
 .cell,
 .tile {
   width: 100px;
